Closed Bug 1130739 Opened 10 years ago Closed 9 years ago

Android crash in glGetInternalformativ on Mali-450 MP & 400 MP

Categories

(Firefox for Android Graveyard :: Toolbar, defect)

ARM
Android
defect
Not set
critical

Tracking

(fennec+, firefox50 fixed, firefox51 fixed, firefox52 fixed)

RESOLVED FIXED
Firefox 52
Tracking Status
fennec + ---
firefox50 --- fixed
firefox51 --- fixed
firefox52 --- fixed

People

(Reporter: philipp, Assigned: jnicol)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-7dfcbb8e-96af-4cb8-9bd4-211fc2150201. ============================================================= more reports at https://crash-stats.mozilla.com/report/list?product=FennecAndroid&signature=glGetInternalformativ this crash seems to affect only devices with Mali-450 MP & 400 MP GPU, and from that subgroup predominantly CUBE U65GT tablets (75% of all crashes). it is the #37 top crasher on firefox 35 at the moment. related sumo thread by an affected user: https://support.mozilla.org/en-US/questions/1045620
Component: Untriaged → Graphics, Panning and Zooming
Product: Core → Firefox for Android
Version: 35 Branch → Trunk
Severity: normal → critical
Keywords: steps-wanted
This code hasn't changed in quite some time: http://mxr.mozilla.org/mozilla-release/source/gfx/gl/SharedSurfaceEGL.cpp#197 I wonder what's going wrong there. Maybe a null mImage?
Assignee: nobody → jgilbert
tracking-fennec: --- → ?
tracking-fennec: ? → +
Assignee: jgilbert → nobody
Assignee: nobody → jnicol
I believe this is just bug 1264505 but with a slightly different signature (different driver version?). Looks like we need to disable OES_EGL_image_external for Mali 450s as well as Mali 400s.
See Also: → 1264505
Comment on attachment 8793263 [details] Bug 1130739 - Disable OES_EGL_image_external on Mali 450. https://reviewboard.mozilla.org/r/80056/#review78756
Attachment #8793263 - Flags: review?(edwin) → review+
Oops, that's a link to all my try pushes! Here's the right one: https://treeherder.mozilla.org/#/jobs?repo=try&revision=a0d18185ec49e9f1f12c205abeab62eb84053c13
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/autoland/rev/770a9b2e9ab6 Disable OES_EGL_image_external on Mali 450. r=eflores
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 52
Comment on attachment 8793263 [details] Bug 1130739 - Disable OES_EGL_image_external on Mali 450. I think we should include this in 50 and 51 Approval Request Comment [Feature/regressing bug #]: I believe this crash was introduced by bug 1144906. It's been around a while anyway. [User impact if declined]: Guaranteed crash on youtube or other videos for Mali 450 devices [Describe test coverage new/current, TreeHerder]: Workaround has been in place for Mali 400 devices for a couple of months (1264505) [Risks and why]: Low - workaround already proven to work, just enabling it for another GPU model [String/UUID change made/needed]: N/A
Attachment #8793263 - Flags: approval-mozilla-beta?
Attachment #8793263 - Flags: approval-mozilla-aurora?
Comment on attachment 8793263 [details] Bug 1130739 - Disable OES_EGL_image_external on Mali 450. Crash fix for a specific device type, Aurora51+, Beta50+
Attachment #8793263 - Flags: approval-mozilla-beta?
Attachment #8793263 - Flags: approval-mozilla-beta+
Attachment #8793263 - Flags: approval-mozilla-aurora?
Attachment #8793263 - Flags: approval-mozilla-aurora+
Product: Firefox for Android → Firefox for Android Graveyard

Removing steps-wanted keyword because this bug has been resolved.

Keywords: steps-wanted
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: