gfx/gl/GLContext.h
@@ -176,6 +176,7 @@ enum class GLRenderer {
     AdrenoTM330,
     AdrenoTM420,
     Mali400MP,
+    Mali450MP,
     SGX530,
     SGX540,
     Tegra,
